# rs-timeskip-archiver

./: .gitignore  Cargo.toml  LICENSE  Readme.md
migrations/2023-09-10-052632_create_profiles_table/: down.sql  up.sql
migrations/2023-09-10-092702_create_files_table/: down.sql  up.sql
src/: cli.rs  lib.rs  main.rs  models.rs  schema.rs  thread_pool.rs  ui.rs
src/ui/: download.rs
