[package]
name = "rs-timeskip-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
dialoguer = "0.10.4"
diesel = { version = "2.1.1", features = ["sqlite", "chrono"] }
dotenvy = "0.15.7"
chrono = "0.4"
sha3 = "0.10.8"
hex = "0.4.3"
tabled = "0.14.0"
unicode-width = "0.1.8"
iced = {version = "0.10", features = ["smol", "tokio"]}
rfd = "0.6"
futures = "0.3.28"
rayon = "1.5"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]